[package]
name = "dockerfile_builder"
version = "0.1.2"
edition = "2021"
description = "Flexible Dockerfile builder with type-safe features"
keywords = ["docker", "dockerfile", "dockerfile-builder", "dockerfile-generator"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ptmphuong/dockerfile-builder/"
authors = ["Phuong Pham <ptmphuong9@gmail.com>"]

[dependencies]
dockerfile_builder_macros = "0.1.0"
eyre = "0.6.8"

[dev-dependencies]
expect-test = "1.4.1"
